<package>
  <name>linearaxis_description</name>
  <version>0.0.1</version>
  <description>The linearaxis_description package</description>

  <maintainer email="weinland@fzi.de">weinland</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>